--- a/style.css
+++ b/style.css
@@ -1,16 +1,71 @@
-.wrapper {
-    width: 100%;
-    max-width: 640px;
-    margin: 0 auto;
+body {
+    font-family: sans-serif;
+    color: #D1D5D8;
+    margin: 0;
 }
 
-.input {
+html, body, .wrapper {
+    height: 100%;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+h4 {
+    margin-top: 2em;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+.right h4 {
+    color: #8AA0B0;
+    padding: 0 2em;
+}
+
+.wrapper {
     width: 100%;
-    height: 5em;
+    margin: 0 auto;
+    display: flex;
+    align-items: stretch;
+}
+
+.left {
+    float: left;
+    width: 100%;
+    max-width: 20%;
+    padding: 0 2em;
+    background: #3C6187;
+}
+
+.right {
+    width: 100%;
+    max-width: 80%;
+}
+
+.table-input {
+    width: 100%;
+    height: 8em;
+    font-family: sans-serif;
+    font-size: 1em;
+    color: #355065;
+}
+
+input, .table-input {
+    border-radius: 8px;
+    border: 1px solid #EAECED;
+    padding: 12px;
+}
+
+label:hover {
+    cursor: pointer;
+}
+
+label {
+    font-weight: bold;
 }
 
 .canvas {
-    outline: 1px solid red;
     display: block;
     width: 100%;
     box-sizing: border-box;
@@ -23,6 +78,5 @@
 }
 
 .delimiter-list li {
-    display: inline-block;
-    padding-right: 2em;
+    width: 100%;
 }
