--- a/style.css
+++ b/style.css
@@ -1,82 +1,82 @@
 body {
-    font-family: sans-serif;
-    color: #D1D5D8;
+    font-family: 'Roboto', sans-serif;
+    color: #ffffff;
     margin: 0;
-}
-
-html, body, .wrapper {
-    height: 100%;
+    font-size: 16px;
+    background: #D1D5D8;
 }
 
 * {
     box-sizing: border-box;
-}
-
-h4 {
-    margin-top: 2em;
-    text-transform: uppercase;
-    font-weight: normal;
-}
-
-.right h4 {
-    color: #8AA0B0;
-    padding: 0 2em;
+    outline: none;
 }
 
 .wrapper {
     width: 100%;
-    margin: 0 auto;
-    display: flex;
-    align-items: stretch;
+    max-width: 1024px;
+    margin: 40px auto 0 auto;
+    border-radius: 4px;
+    box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.2);
 }
 
-.left {
+header {
+    background: #1C2931;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom: 1px solid #2F363A;
+}
+
+h1 {
+    font-size: 1em;
+    text-transform: uppercase;
+    padding: 2em;
+    margin: 0;
+}
+
+h2 {
+    font-size: 1em;
+    padding: 1.5em 0em 1em 0em;
+    margin: 0;
+}
+
+.content {
+    background: #1E2C34;
+    overflow: hidden;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.sidebar {
     float: left;
-    width: 100%;
-    max-width: 20%;
-    padding: 0 2em;
-    background: #3C6187;
-}
-
-.right {
-    width: 100%;
-    max-width: 80%;
+    padding: 0em 2em 2em 2em;
 }
 
 .table-input {
     width: 100%;
     height: 8em;
-    font-family: sans-serif;
-    font-size: 1em;
-    color: #355065;
-}
-
-input, .table-input {
-    border-radius: 8px;
-    border: 1px solid #EAECED;
-    padding: 12px;
-}
-
-label:hover {
-    cursor: pointer;
-}
-
-label {
-    font-weight: bold;
-}
-
-.canvas {
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 1em;
 }
 
 .delimiter-list {
-    list-style-type: none;
-    margin: 0 0 1em 0;
+    margin: 0;
     padding: 0;
+    list-style-type: none;
 }
 
-.delimiter-list li {
-    width: 100%;
+.other-delimiter {
+    margin-left: 2em;
+    width: 2em;
+    padding: 0.5em;
+    border-radius: 4px;
+    border: none;
+    font-weight: bold;
+}
+
+.main {
+    float: left;
+}
+
+.chart {
+    padding: 0em 0em 2em 0em;
 }
